Changelog
[b]1.2 - 04 Dec 2011[/b]
o + Release under proper open license
o - Removed support for [attachment tags in message (if you are upgrading from a mod that uses these you will need to manually replace those tags in your database.
o - Removed support for 'Highslide Image Viewer', only HS4SMF Highslide is supported
o ! Fixed error where [attach] shortcut was not working
o ! Fixed error where previewing a modified message would not render the 'fake' thumb properly
o + Improved error handling for improperly constructed tags

[b]1.11 - 21 Mar 2011[/b]
o ! fixed issue where an ILA tag in a quote would not correctly render a back link
o ! minor code formatting updates
o ! update for portaMX RC 1.0 thanks to r2d2-trader

[b]1.10 - 19 Feb 2011[/b]
o + RC5 support
o ! fixed a real_width, real_height undefined index error log spam
o ! fixed error when called from news.php via rss feeds
o ! fixed potential issue where a normal below the post attachment may not show up after a quoted block with ila tags in the quote
o ! fixed improper nesting of attachments array when loaded by ILA

[b]1.09 - 19 Dec 2010[/b]
o + added Danish Translation (thanks henrik1782)
o ! fixed undefined index error where javascript image code was not being set by smf
o ! fixed issue where you had to toggle the basic menu item on/off to get the full menu

[b]1.08 - 08 Nov 2010[/b]
o + added support for RC4

[b]1.07 - 03 Sept 2010[/b]
o + added support for HS4SMF so inline images will highslide if HS4SMF mod is installed
o + changed dependency on global variable to improve footprint
o ! prevent rendering of ILA tags when PortalMX is showing its front page as both load Display.template.php which causes a redeclare template_main() error.
o + added Russian (thanks Bugo), German (thanks Mave), Dutch (thanks sander76) and Portuguese (thanks Fernando_CD) translations
o ! fixed issue where the attach tag was not being inserted in to the WYSIWYG editor via the attachment pull down