@@ -3,7 +3,7 @@
 <package-info xmlns="http://www.simplemachines.org/xml/package-info" xmlns:smf="http://www.simplemachines.org/">
 	<name>InLine Attachments</name>
 	<id>spuds:ILA</id>
-	<version>1.2</version>
+	<version>1.2.1</version>
 	<type>modification</type>
 	
 	<install for="2.0 - 2.0.99">
